# frappe-devops

./: .env.example  .gitignore  README.md  pyproject.toml  tailwind.css
.github/workflows/: test.yml
app/: settings.py  urls.py  views.py
app/templates/: base.html  home.html  login.html  private.html  signup.html
app/users/: admin.py  cli.py  models.py  urls.py
app/users/migrations/: 0001_initial.py
app/users/templates/admin/users/: user_form.html
scripts/: install
tests/: test_urls.py  test_users.py
