[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "plain",
    "plain.models",
    "plain.auth",
    "plain.code",
    "plain.passwords",
    "plain.sessions",
    "plain.admin",
    "plain.tailwind",
    "plain.htmx",
    "plain.elements",
    "psycopg[binary]>=3.2.3",
]

[tool.uv]
dev-dependencies = [
    "plain-dev",
    "plain-pytest",
]

[tool.plain.dev.services]
postgres = {cmd = "docker run --name app-postgres --rm -p 54321:5432 -v $(pwd)/.plain/dev/pgdata:/var/lib/postgresql/data -e POSTGRES_PASSWORD=postgres postgres:15 postgres"}

[tool.plain.tailwind]
version = "4.0.9"
